fix script